--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -16,11 +16,11 @@
     max-width: 700px;
     margin: 0 auto;
     padding: 4rem 3rem;
-    background-color: #fff;
+    background-color: hsl(var(--card));
     border-radius: var(--radius);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
     /* very soft shadow */
-    border: 1px solid #f1f5f9;
+    border: 1px solid hsl(var(--border));
 }
 
 .course {
